--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>splix/grails-spring-security-twitter @ GitHub</title>
+  <title>Twitter Auth for Grails - splix/grails-spring-security-twitter @ GitHub</title>
 
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #e1d9f7;
+      background-color: #e1e1f1;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -16,18 +16,68 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #1e2608; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #1e2608; }
-    h3 { text-align: center; color: #1e2608; }
-    a { color: #1e2608; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
+    h1.title {
+        font-size: 2.5em;
+        color: #1e2608;
+        margin-bottom: 3px;
+    }
+    h1 .small {
+        font-size: 0.4em;
+    }
+    h1 a {
+        text-decoration: none
+    }
+    h2 {
+        font-size: 1.5em;
+        color: #1e2608;
+    }
+    h3 {
+        color: #1e2608;
+    }
+    a {
+        color: #1e2608;
+    }
+    .description {
+        font-size: 1.2em;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        font-style: italic;
+    }
+    .download {
+        float: right;
+    }
+    pre {
+        background: #000;
+        color: #fff;
+        padding: 15px;
+    }
+    hr {
+        border: 0;
+        width: 80%;
+        border-bottom: 1px solid #aaa
+    }
+    .footer {
+        border-top: 3px solid #555;
+        text-align:center;
+        padding-top: 30px;
+        margin-top: 30px;
+        font-style: italic;
+    }
   </style>
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-55990-12']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 </head>
 
 <body>
@@ -36,49 +86,52 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/splix/grails-spring-security-twitter/zipball/master">
+      <a href="http://github.com/downloads/splix/grails-spring-security-twitter/grails-spring-security-twitter-0.2.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/splix/grails-spring-security-twitter/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/splix/grails-spring-security-twitter">grails-spring-security-twitter</a>
+    <h1 class="title"><a href="http://github.com/splix/grails-spring-security-twitter">grails-spring-security-twitter</a>
       <span class="small">by <a href="http://github.com/splix">splix</a></span></h1>
 
     <div class="description">
       Twitter Auth plugin for Grails
     </div>
 
-    <p>Grails plugin for Twitter Authentication, as extension to [Grails Spring Security Core plugin](http://www.grails.org/plugin/spring-security-core)
-</p><h2>Dependencies</h2>
-<p> * grails 1.3+
- * spring-security-core plugin 1.1+
- * twitter4j (will be downloaded automatically)</p>
-<h2>Install</h2>
-<p>Install spring-security-plugin:
+    <p>
+        Grails plugin for Twitter Authentication, as extension to <a href="http://www.grails.org/plugin/spring-security-core">Grails Spring Security Core plugin</a>
+    </p>
 
-```
-grails install-plugin spring-security-core
-```
+    <h2>Dependencies</h2>
+    <ul>
+        <li>grails 1.3+</li>
+        <li>spring-security-core plugin 1.1+</li>
+        <li>twitter4j (will be downloaded automatically)</li>
+    </ul>
 
-Download package from github: [grails-spring-security-twitter-0.2.zip](http://github.com/downloads/splix/grails-spring-security-twitter/grails-spring-security-twitter-0.2.zip).
-And install it:
+    <h2>Install</h2>
 
-```
-grails install-plugin %PATH_TO_DOWNLOADED_ZIP%
-grails s2-init-twitter
-```</p>
-<h2>License</h2>
-<p>Licensed under the Apache License, Version 2.0</p>
-<h2>Authors</h2>
-<p>Igor Artamonov (igor@artamonov.ru)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Igor Artamonov (igor@artamonov.ru)<br/>      </p>
+    <h3>Install spring-security-plugin:</h3>
 
+    <pre>$ grails install-plugin spring-security-core</pre>
+
+    <p>
+        Download package from github: <a href="http://github.com/downloads/splix/grails-spring-security-twitter/grails-spring-security-twitter-0.2.zip">grails-spring-security-twitter-0.2.zip</a>.
+    </p>
+    <h3>And install it:</h3>
+    <pre>$ grails install-plugin %PATH_TO_DOWNLOADED_ZIP%
+$ grails s2-init-twitter</pre>
+
+    <h2>License</h2>
+    <p>Licensed under the Apache License, Version 2.0</p>
+
+    <h2>Authors</h2>
+    <p>
+        Igor Artamonov - <a href="mailto:igor@artamonov.ru">igor@artamonov.ru</a> / <a href="http://igorartamonov.com">igorartamonov.com</a>
+    </p>
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
+      You can download sources of this project in either
       <a href="http://github.com/splix/grails-spring-security-twitter/zipball/master">zip</a> or
       <a href="http://github.com/splix/grails-spring-security-twitter/tarball/master">tar</a> formats.
     </p>
@@ -93,14 +146,5 @@ grails s2-init-twitter
 
   </div>
 
-  <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-55990-12");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 </body>
 </html>
